<resources>
    <string name="app_name">Brødskalaen</string>
    <string name="title_activity_main">Brødskalaen</string>
    <string name="title_home">Siktet</string>
    <string name="title_dashboard">Sammalt</string>
    <string name="title_notifications">Helkorn</string>
    <string name="button_text">Kalkuler</string>

    <string name="label_hvetemel">Hvetemel</string>
    <string name="label_rugmel">Rugmel</string>
    <string name="label_spelt">Speltmel</string>
    <string name="label_sammalt_hvete">Sammalt Hvete</string>
    <string name="label_sammalt_spelt">Sammalt Spelt</string>
    <string name="label_sammalt_rug">Sammalt Rug</string>
    <string name="label_byggmel">Byggmel</string>
    <string name="label_havremel">Havremel</string>
    <string name="label_havregryn">Havregryn:</string>
    <string name="label_hele_korn">Hele Korn</string>
    <string name="label_hvetekli">Hvetekli</string>
    <string name="label_rugkli">Rugkli</string>
    <string name="label_havrekli">Havrekli</string>


    <string name="dec_hvetemel">10</string>


</resources>
