<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/test"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:layout_editor_absoluteY="81dp"
    android:tag="fragment_siktet"
    >




    <RelativeLayout
        android:id="@+id/relative_siktet_hvetemel"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="24dp"
        app:layout_constraintBottom_toTopOf="@+id/relativeLayout2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView">

        <TextView
            android:id="@+id/label_hvetemel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/quattrocento"
            android:layout_centerHorizontal="true"
            android:labelFor="@id/text_hvetemel"
            android:text="@string/label_hvetemel" />

        <EditText
            android:id="@+id/text_hvetemel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:ems="10"
            android:inputType="number"
            android:text="@string/dec_hvetemel"
            android:textAlignment="center"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            tools:layout_editor_absoluteY="63dp" />
    </RelativeLayout>


    <RelativeLayout
        android:id="@+id/relativeLayout2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="24dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">


        <TextView
            android:id="@+id/label_rugmel"
            android:layout_width="55dp"
            android:layout_height="21dp"
            android:layout_centerHorizontal="true"
            android:fontFamily="@font/quattrocento"
            android:labelFor="@id/text_rugmel"
            android:text="@string/label_rugmel"
            tools:layout_editor_absoluteX="165dp"
            tools:layout_editor_absoluteY="275dp" />

        <EditText
            android:id="@+id/text_rugmel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_centerHorizontal="true"
            android:ems="10"
            android:inputType="number"
            tools:layout_editor_absoluteX="85dp"
            tools:layout_editor_absoluteY="203dp" />
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/relativeLayout3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="55dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/relativeLayout2">


        <TextView
            android:id="@+id/label_speltmel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/quattrocento"
            android:labelFor="@id/text_speltmel"
            android:text="@string/label_spelt"
            android:layout_centerHorizontal="true" />

        <EditText
            android:id="@+id/text_speltmel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:ems="10"
            android:inputType="number" />


    </RelativeLayout>


</android.support.constraint.ConstraintLayout>