<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:layout_editor_absoluteY="81dp"
    android:id="@+id/sammalt_root_layout">

    <!-- Sammalt hvete-->
    <RelativeLayout
        android:id="@+id/relative_sammalthvete"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="parent">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:text="@string/label_sammalt_hvete"
            android:labelFor="@id/txt_sammalt_hvete"/>

        <EditText
            android:id="@+id/txt_sammalt_hvete"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="10"
            android:layout_centerHorizontal="true"
            android:inputType="numberDecimal"/>
    </RelativeLayout>


    <!-- Sammalt rug -->
    <RelativeLayout
        android:id="@+id/relative_sammaltrug"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/relative_sammalthvete"
        app:layout_constraintBottom_toTopOf="@+id/relative_sammaltspelt">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:text="@string/label_sammalt_rug"
            android:labelFor="@id/txt_sammalt_rug"/>

        <EditText
            android:id="@+id/txt_sammalt_rug"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="10"
            android:layout_centerHorizontal="true"
            android:inputType="numberDecimal"/>

    </RelativeLayout>

    <!-- Sammalt spelt -->
    <RelativeLayout
        android:id="@+id/relative_sammaltspelt"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/relative_sammaltrug"
        app:layout_constraintBottom_toTopOf="@id/relative_byggmel">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:text="@string/label_sammalt_spelt"
            android:labelFor="@id/txt_sammalt_spelt"/>

        <EditText
            android:id="@+id/txt_sammalt_spelt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="10"
            android:layout_centerHorizontal="true"
            android:inputType="numberDecimal"/>

    </RelativeLayout>

    <!-- Byggmel -->
    <RelativeLayout
        android:id="@+id/relative_byggmel"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/relative_sammaltspelt"
        app:layout_constraintBottom_toTopOf="@id/relative_havremel"
        tools:layout_editor_absoluteX="16dp"
        tools:layout_editor_absoluteY="233dp"
        android:tag="fragment_sammalt">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:text="@string/label_byggmel"
            android:labelFor="@id/txt_byggmel"/>

        <EditText
            android:id="@+id/txt_byggmel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:ems="10"
            android:inputType="numberDecimal"/>

    </RelativeLayout>

    <!-- Havremel -->
    <RelativeLayout
        android:id="@+id/relative_havremel"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="24dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/relative_byggmel"
        app:layout_constraintBottom_toBottomOf="parent"
        tools:layout_editor_absoluteX="16dp"
        tools:layout_editor_absoluteY="342dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:text="@string/label_havremel"
            android:labelFor="@id/txt_havremel"/>

        <EditText
            android:id="@+id/txt_havremel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:ems="10"
            android:inputType="numberDecimal"/>
    </RelativeLayout>
</android.support.constraint.ConstraintLayout>