<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:layout_editor_absoluteY="81dp"
    android:tag="fragment_helkorn"
    >

    <!-- havregryn-->
    <LinearLayout
        android:id="@+id/relative_havregryn"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="80dp"
        android:orientation="horizontal"
        android:gravity=""
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="parent">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="10dp"
            android:gravity="center"
            android:text="@string/label_havregryn"
            android:fontFamily="@font/quattrocento_bold"
            android:labelFor="@id/txt_havregryn"/>

        <EditText
            android:id="@+id/txt_havregryn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="5"

            android:inputType="numberDecimal"/>
    </LinearLayout>


    <!-- Hele korn -->
    <LinearLayout
        android:id="@+id/relative_hele_korn"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/relative_havregryn"
        app:layout_constraintBottom_toTopOf="@+id/relative_hvetekli">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="10dp"
            android:text="@string/label_hele_korn"
            android:fontFamily="@font/quattrocento_bold"
            android:labelFor="@id/txt_hele_korn"/>

        <EditText
            android:id="@+id/txt_hele_korn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="5"
            android:inputType="numberDecimal"/>

    </LinearLayout>

    <!-- Hvetekli -->
    <LinearLayout
        android:id="@+id/relative_hvetekli"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/relative_hele_korn"
        app:layout_constraintBottom_toTopOf="@id/relative_rugkli">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="10dp"
            android:text="@string/label_hvetekli"
            android:fontFamily="@font/quattrocento_bold"
            android:labelFor="@id/txt_hvetekli"/>

        <EditText
            android:id="@+id/txt_hvetekli"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="5"
            android:inputType="numberDecimal"/>

    </LinearLayout>

    <!-- Rugkli -->
    <LinearLayout
        android:id="@+id/relative_rugkli"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/relative_hvetekli"
        app:layout_constraintBottom_toTopOf="@id/relative_havrekli"
        tools:layout_editor_absoluteX="16dp"
        tools:layout_editor_absoluteY="233dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="10dp"
            android:text="@string/label_rugkli"
            android:fontFamily="@font/quattrocento_bold"
            android:labelFor="@id/txt_rugkli"/>

        <EditText
            android:id="@+id/txt_rugkli"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="5"
            android:inputType="numberDecimal"/>

    </LinearLayout>

    <!-- havrekli -->
    <LinearLayout
        android:id="@+id/relative_havrekli"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="60dp"
        android:orientation="horizontal"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/relative_byggmel"
        app:layout_constraintBottom_toBottomOf="parent"
        tools:layout_editor_absoluteX="16dp"
        tools:layout_editor_absoluteY="342dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="10dp"
            android:text="@string/label_havrekli"
            android:fontFamily="@font/quattrocento_bold"
            android:labelFor="@id/txt_havrekli"/>

        <EditText
            android:id="@+id/txt_havrekli"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="5"
            android:inputType="numberDecimal"/>
    </LinearLayout>
</android.support.constraint.ConstraintLayout>