<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <Button
        android:id="@+id/button"
        android:layout_width="158dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="50dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:background="@android:color/holo_orange_dark"
        android:fontFamily="@font/quattrocento"
        android:text="@string/button_text"
        android:textColor="@color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <RelativeLayout
        android:id="@+id/relativeLayout"
        android:layout_width="wrap_content"
        android:layout_height="36dp"
        app:layout_constraintBottom_toTopOf="@+id/relativeLayout2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/label_hvetemel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/quattrocento"
            android:text="@string/label_hvetemel" />

        <EditText
            android:id="@+id/text_hvetemel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_centerVertical="true"
            android:ems="10"
            android:inputType="number"
            tools:layout_editor_absoluteX="126dp"
            tools:layout_editor_absoluteY="237dp" />


    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/relativeLayout3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toTopOf="@+id/imageView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/relativeLayout2">


        <TextView
            android:id="@+id/label_speltmel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/quattrocento"
            android:text="@string/label_spelt"
            tools:layout_editor_absoluteX="164dp"
            tools:layout_editor_absoluteY="184dp" />


        <EditText
            android:id="@+id/text_speltmel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="number"
            tools:layout_editor_absoluteX="85dp"
            tools:layout_editor_absoluteY="398dp" />
    </RelativeLayout>

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toTopOf="@+id/button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:srcCompat="@android:drawable/btn_star_big_on" />

    <RelativeLayout
        android:id="@+id/relativeLayout2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.502"
        app:layout_constraintStart_toStartOf="parent"
        tools:layout_editor_absoluteY="158dp">


        <TextView
            android:id="@+id/label_rug"
            android:layout_width="55dp"
            android:layout_height="21dp"
            android:fontFamily="@font/quattrocento"
            android:text="@string/label_rug"
            tools:layout_editor_absoluteX="165dp"
            tools:layout_editor_absoluteY="275dp" />

        <EditText
            android:id="@+id/text_rugmel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:ems="10"
            android:inputType="number"
            tools:layout_editor_absoluteX="85dp"
            tools:layout_editor_absoluteY="203dp" />
    </RelativeLayout>


</android.support.constraint.ConstraintLayout>